--- a/src/css/App.css
+++ b/src/css/App.css
@@ -43,6 +43,7 @@ body {
     background-color: var(--tileColour);
     border-radius: 20px;
     color: var(--textColour);
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .sectionHead {
